@@ -6,7 +6,8 @@
 \usage{
 ecdf(x)
 
-\method{plot}{ecdf}(\dots, verticals = FALSE, col.01line = "gray70")
+\method{plot}{ecdf}(x, \dots, ylab="Fn(x)", verticals = FALSE,
+     col.01line = "gray70")
 
 \method{print}{ecdf}(x, digits= getOption("digits") - 2, \dots)
 }
@@ -15,6 +16,7 @@ ecdf(x)
     the methods, an object of class \code{"ecdf"}, typically.}
   \item{\dots}{arguments to be passed to \code{\link{plot.stepfun}}, the
     first of which should be an \R object of class \code{"ecdf"}.}
+  \item{ylab}{label for the y-axis.}
   \item{verticals}{see \code{\link{plot.stepfun}}.}
   \item{col.01line}{numeric or character specifying the color of the
     horizontal lines at y=0 and 1, see \code{\link{colors}}.}
